--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,3 @@
-# .env.sample
-PORT=8080
-# Bitbucket API token (required for all Bitbucket API calls)
-BITBUCKET_TOKEN=your_bitbucket_token_here
-# Add other environment variables as needed for your application
+BITBUCKET_API_EMAIL=your_bitbucket_email_here
+BITBUCKET_API_TOKEN=your_bitbucket_token_here
+RUST_BACKTRACE=1
