--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,22 @@
 [package]
 name = "bitbucket-mcp"
-version = "0.1.0"
-edition = "2021"
+version = "1.0.0"
+edition = "2024"
+
+[[bin]]
+name = "bitbucket_stdio"
+path = "src/bitbucket_stdio.rs"
 
 [dependencies]
-actix-web = "4.11.0"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-reqwest = { version = "0.12.19", features = ["json"] }
-tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
-log = "0.4.27"
-env_logger = "0.11.8"
-serde_urlencoded = "0.7.1"
+rmcp = { version = "0.1.5", features = ["server", "transport-io"]}
+anyhow = "1.0"
+reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = [
+    "env-filter",
+    "std",
+    "fmt",
+] }
+tokio = { version = "1", features = ["full"] }
