Refactor delete_* methods for testability and error handling; add comprehensive tests; all tests passing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ tracing-subscriber = { version = "0.3", features = [
     "fmt",
 ] }
 tokio = { version = "1", features = ["full"] }
+
+[dev-dependencies]
+mockito = "0.31"
